<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/min_size_default">

    <LinearLayout
        android:id="@+id/llRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <!--  app:srcCompat="@drawable/media" -->
        <ImageView
            android:id="@+id/ivFirst"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:contentDescription="@string/content_description_media"
            android:scaleType="centerCrop"
            android:src="#000000" />

        <LinearLayout
            android:id="@+id/llText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/medium_size_default">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAppearance="?attr/textAppearanceHeadline6"
                tools:text="@tools:sample/lorem[5]" />

            <TextView
                android:id="@+id/tvSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_size_default"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/secondary_text"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                tools:text="@tools:sample/lorem[40]" />

        </LinearLayout>

        <!-- Buttons -->
        <LinearLayout
            android:id="@+id/llButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/min_size_default"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Button1"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/min_size_default"
                android:text="@string/action_1" />

            <View
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <ImageView
                android:id="@+id/ButtonFavorites"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:contentDescription="@string/favorite_button"
                android:padding="3dp"
                app:srcCompat="@drawable/ic_favorite_black"
                android:adjustViewBounds="true"
                style="?android:attr/borderlessButtonStyle"
                android:clickable="true"
                android:focusable="true"/>

            <ImageView
                android:id="@+id/ButtonShare"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:contentDescription="@string/share_button"
                android:padding="3dp"
                app:srcCompat="@drawable/ic_share"
                android:adjustViewBounds="true"
                style="?android:attr/borderlessButtonStyle"
                android:clickable="true"
                android:focusable="true"/>
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>